<resources>
    <string name="app_name">Pelita Apps</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_account">Login to your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btnLoginn">L O G I N</string>
    <string name="donthvA">"Dont have Account? Sign Up "</string>
    <string name="regis_account">Register Account</string>
    <string name="checked"><![CDATA[by signing up you agree to our terms & CONDITIONS of use and privacy policy.]]></string>
    <string name="btnRegister">"R E G I S T E R "</string>
    <string name="username">Username</string>
    <string name="pelita">P E L I T A</string>
    <string name="manageyw">Manage Your Waste</string>
    <string name="register">Dont Have An Account </string>
    <string name="tv_click">Click Here</string>

    <!--    Digunakan untuk Profil -->
    <string name="username_profile">Aditya Rizkiawan N</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="btnBahasa">Language</string>
    <string name="btnAbout">About</string>
    <string name="btnReview">Review</string>
    <string name="btnLogout">Logout</string>
    <string name="btnSimpan">S A V E</string>
    <string name="payment_success">Success ! The payment will done in 1x24</string>
    <string name="kembali">Back to the main page</string>
    <string name="SelangkahLagi">One step close</string>
    <string name="btnKonfirmasi">C O N F I R M</string>
    <string name="tvBack">Cancel ?</string>

    <string name="back">Back</string>
    <string name="user">User</string>
    <string name="photo">Photo</string>
    <string name="take_picture">Take Picture</string>
    <string name="trash_type">Trash type</string>
    <string name="trash_weight">Trash weight</string>
    <string name="pick_up_loc">Pick up location</string>
    <string name="note">Note</string>
    <string name="next">Next</string>
    <string name="maps_picker">Maps picker</string>
    <string name="map_hint">Move the pointer to desirable place</string>
    <string name="loc_now">Current location</string>
    <string name="address">Address : %1$s</string>
    <string name="clich_here">Click to pick the location</string>
    <string name="in_kg">(in kg)</string>
    <string name="weight_limit">Allowed weight is only 2–10 kg</string>
    <string name="empty_address">Pickup point is not allowed to be empty</string>
    <string name="result">Result</string>
    <string name="back_home">Back to home</string>
    <string name="success_message">Success !\nDriver is on the way to your location</string>
    <string name="failed_message">Failed !\nWe cannot proccess your request</string>
    <string name="no_empty">Not allowed to be empty</string>
    <string name="dashboard">Dashboard</string>
    <string name="total_point">Total Point</string>
    <string name="count_pts">%1$spts</string>
    <string name="lets_care_environment">Let\'s take care our environment</string>
    <string name="otw_eta">Will arrive in %1$s</string>
    <string name="sold_trash">Sold trash</string>
    <string name="count_kg">%1$skg</string>
    <string name="claim_gift">Claim gift</string>
    <string name="count_gift_percent">%1$s</string>
    <string name="article_title">Article title</string>
    <string name="article_description"> </string>
    <string name="article_url_src">Source : %1$s</string>
    <string name="change_your_language">Change your language</string>
    <string name="indonesia">Indonesia</string>
    <string name="english">English</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="name">Name</string>
    <string name="warn_take_picture">You should take picture of your trash</string>
    <string name="trash_already">There is already trash in the pick-up process</string>
    <string name="driver_otw">Our driver is on the way to pick your trash</string>
    <string name="driver_name">Name : %1$s</string>
    <string name="driver_phone">Phone : %1$s</string>
    <string name="driver_call">Call</string>
    <string name="name_is_not_allowed_to_be_empty">Name is not allowed to be empty</string>
    <string name="email_is_not_allowed_to_be_empty">Email is not allowed to be empty</string>
    <string name="password_is_not_allowed_to_be_empty">Password is not allowed to be empty</string>
    <string name="phone">Phone</string>
    <string name="payment_method">Payment Point</string>
    <string name="points">Points</string>
    <string name="process">Process</string>
    <string name="pelitaa">pelita</string>
    <string name="phone_is_not_allowed_to_be_empty">Phone is not allowed to be empty</string>
    <string name="points_is_not_allowed_to_be_empty">Points is not allowed to be empty</string>
    <string name="confirm_your_password_to_process">Confirm your password to process</string>
    <string name="about">About</string>
    <string name="about_pelita">PELITA - Peduli Lingkungan Kita\n\nSmart Waste Management Application as a solution to educate people on how to manage waste into something useful and contribute to the economy\n\nPoor waste management often occurs because the community does not know the type of waste they have, or waste accumulates because there are no public trash bins or because the cleaning service\'s schedule for waste collection is irregular. These are the factors that cause an abundance of scattered litter that can cause environmental damage.\n\nThe PELITA application is a mobile application that aims to help users manage waste in their environment. This application is designed using machine learning technology to detect the type of waste automatically, making it easier for users to sort waste and dispose of it according to its type. This application is also equipped with a feature to monitor garbage collection schedules and provide notifications to users when waste must be disposed of.\n\nWith this garbage application, it is hoped that it can increase public awareness to sort waste and dispose of it according to its type. This can help reduce the amount of waste scattered in the environment and increase the efficiency of the waste collection process. In addition, this application can also help users to reduce the negative impact of waste on the environment and human health.</string>
    <string name="review">Review</string>
    <string name="review_us">Review us</string>
    <string name="submit">Submit</string>
    <string name="language">Language</string>
    <string name="about_pelita_title">About Pelita</string>
    <string name="sell_your_waste">Sell your waste</string>
    <string name="this_trash_is">This trash is %1$s</string>
    <string name="re_take">Re-take</string>
    <string-array name="jenis_sampah">
        <item>Iron</item>
        <item>Glass</item>
        <item>Cardboard</item>
        <item>Rubber</item>
        <item>Papers</item>
        <item>Household organic waste</item>
        <item>Plastic</item>
    </string-array>

</resources>