<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".payment.ConfirmPaymentActivity">

    <!--Teks Password-->
    <TextView
        android:id="@+id/tvSelangkahLagi"
        android:layout_width="236dp"
        android:layout_height="72dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="96dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="64dp"
        android:text="@string/SelangkahLagi"
        android:textAlignment="center"
        android:textAppearance="@style/SelangkahLagi" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="460dp"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSelangkahLagi" />

    <!--    Input Konfimasi Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSelangkahLagi"
        app:startIconDrawable="@drawable/ic_password">

        <!--        Custom Konfirmasi Password-->
        <com.dicoding.pelitaapps.customview.EditTextPassword
            android:id="@+id/et_editTextPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="4dp"
            android:ems="10"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Button Konfirmasi-->
    <Button
        android:id="@+id/btnKonfirmasi"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="85dp"
        android:text="@string/btnKonfirmasi" />

    <TextView
        android:id="@+id/tvKembali"
        android:layout_width="155dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="670dp"
        android:layout_marginEnd="50dp"
        android:text="@string/tvBack"
        android:textAlignment="center"
        android:textAppearance="@style/tvBack" />

</RelativeLayout>