<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sell.SellActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:elevation="0dp"
        android:paddingStart="1dp"
        android:paddingEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:elevation="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="0dp"
            android:drawableLeft="@drawable/ic_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="pelita" />

        <Button
            android:id="@+id/user"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:backgroundTint="@color/white"
            android:elevation="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:drawableLeft="@drawable/ic_user" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="220dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/photo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_rect2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_ambil_gambar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/grey"
                android:text="@string/take_picture"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/tv_jenis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/trash_type"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_ambil_gambar" />

            <Spinner
                android:id="@+id/spinner_jenis_sampah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:padding="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_jenis" />

            <TextView
                android:id="@+id/tv_berat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/weight_limit"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_jenis_sampah" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_berat">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_berat_sampah"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="number"
                    android:hint="@string/in_kg"
                    android:paddingTop="8dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tv_titik_jemput_sampah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/pick_up_loc"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_2" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_map"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_marginStart="30dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_titik_jemput_sampah">

                <ImageView
                    android:id="@+id/iv_map"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_rect2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_titik_jemput_sampah" />
                <TextView
                    android:id="@+id/klik_disini"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clich_here"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_alamat"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_map" />

            <TextView
                android:id="@+id/tv_catatan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/note"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_alamat" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_catatan">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_catatan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingTop="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_lanjut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="80dp"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>