<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.TrackDriverActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:elevation="0dp"
        android:paddingStart="1dp"
        android:paddingEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:elevation="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="0dp"
            android:drawableLeft="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/pelita" />

    </androidx.appcompat.widget.Toolbar>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-12dp"
        app:layout_constraintBottom_toTopOf="@+id/cv_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:context=".MapsActivity" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="36dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/map_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/driver_otw"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_otw_eta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_otw_eta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/otw_eta"
                android:textColor="@color/black"
                android:textStyle="normal|italic"
                app:layout_constraintBottom_toTopOf="@+id/tv_driver_name"
                app:layout_constraintEnd_toStartOf="@+id/iv_motorcycle"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/tv_driver_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/driver_name"
                android:textColor="@color/black"
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="@+id/tv_driver_phone"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_driver_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/driver_phone"
                android:textColor="@color/black"
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="@+id/btn_call_driver"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_call_driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/driver_call"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/iv_motorcycle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/ic_motorcycle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/map_hint"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>